--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -17,8 +17,8 @@
       </nav>
     </header>
       <main>
-        <section>
         <article>
+        <section>
       <h2>社会</h2>
 
       <h3>和菓子店も「トリックオアトリート！」</h3>
@@ -56,10 +56,9 @@
         <input type="submit" value="送信">
         <input type="reset" value="リセット">
       </form>
-         </article>
-         </section>
+        </section>
          <section>
-          <article>
+          <section>
             <h2>テクノロジー</h2>
             <h3>SAMURAIが新しい動画をリリース</h3>
             <p>SAMURAI公式YouTubeで新しい動画がリリースされました。
@@ -68,9 +67,12 @@
             </p>
         
             <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo?si=ptBJwrEmEtyWNItQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfu <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo?si=pqDuPXNHP4VKKLJZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>"
+           </section>
+        </article>
+      </main>
+      <footer>
             <p>&copy; SAMURAIニュース</p>
-         </section>
-      </main> 
+      </footer>
   </body>
 </html>
 
