--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -4,8 +4,10 @@
     <title>14章課題提出</title>
     <meta name="description" content="このページは14章の課題です">
     <meta charset="utf-8">
-    <title>My Profile</title>
+    <title>MY profile</title>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
     <style>
         body {
             font-family: 'Arial', 'Meiryo', sans-serif;
@@ -14,7 +16,7 @@
 
         h1 {
             font-family: 'Josefin Sans', sans-serif;
-            font-size: 40px;
+            font-size: 2rem;
             letter-spacing: 1.2em;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             border-bottom: 3px solid rgb(115, 115, 114);
